<resources>
    <string name="app_name">miaosou</string>
    <string name="animationList">miaosou</string>
    <string name="menu_share">share friend</string>
    <string name="share_app">Second dollar heaven, animation, comics have everything.%s：https://www.coolapk.com/apk/com.example.animation</string>
    <string name="copyright">Copyright © 2015&#045;%d SWUST</string>
    <string name="about_name">Nico</string>
    <string name="about_github">https://github.com/NicoLiutong</string>
    <string name="image_search">image search</string>
    <string name="about_author">about</string>
    <string name="setting">setting</string>
    <string name="dowmload_manager">download manager</string>
    <string name="share">share</string>
    <string name="chatting">chatting</string>
    <string name="about_check_updata">chexkUpdata</string>
    <string name="animation_news">news</string>
    <string name="animation_picture">pictures</string>
    <string name="cosplay_picture">pictures</string>
    <string name="pay_author">donate author</string>

    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_id">Image Id</string>
    <string name="image_url">Image Url</string>

    <string name="weixin_hao">WeiXin</string>
    <string name="qq_qun">qq</string>
    <string name="wei_zhi_title">donate·WeiXin</string>
    <string name="wei_zhi_tip">WeiXin scan, or click \ "go donate \", in the upper right corner of WeChat page \ "select the qr code \" from the album.</string>
    <string name="ali_zhi_title">donate·ZhiFuBao</string>
    <string name="ali_zhi_tip">ZhiFuBao scan, or click \ "to donate \"\nit is our greatest motivation</string>

    <string name="user_name">email</string>
    <string name="password">password</string>
    <string name="register">if you were not register,please pink </string>
    <string name="login">login</string>
    <string name="forget_password">forget password？</string>
    <string name="register_email">email：</string>
    <string name="forget_email">please input email</string>
    <string name="forget_password_button">send verified message</string>
    <string name="register_username">UserName：</string>
    <string name="register_edit_username">please input username</string>
    <string name="register_edit_email">please input email</string>
    <string name="register_password">password：</string>
    <string name="register_edit_password">please input string length 4-16</string>
    <string name="register_confirm_password">confirm password：</string>
    <string name="register_edit_confirm_password">please input passord again</string>
    <string name="register_register">register</string>

    <string name="search_more">search more</string>

    <string name="app_setting">setting</string>
    <string name="banckground_setting">background seeting</string>
    <string name="is_use_network_background">is use network background</string>
    <string name="use_network_background">use</string>
    <string name="no_use_network_background">unuse</string>
    <string name="background_filepath">background filepath</string>
    <string name="comic_setting">comic</string>
    <string name="comic_show_style">comic show style</string>
    <string name="comic_show_one_list">one list</string>
    <string name="comic_show_three_list">three list</string>
    <string name="save_filepath">save filepath</string>
    <string name="background_save_filepath">background save filepath</string>
    <string name="animation_picture_save_filepath">anination picture save filepath</string>
    <string name="cosplay_picture_save_filepath">cosplay picture save filepath</string>

</resources>
