<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/app_name">
        <Preference
            android:key="version"
            android:summary="v 1.0"
            android:title="当前版本" />
        <Preference
            android:key="share"
            android:title="@string/menu_share" />
    </PreferenceCategory>
    <PreferenceCategory android:title="关于作者">
        <Preference
            android:key="name"
            android:summary="@string/about_name"
            android:title="作者" />
        <Preference
            android:key="github"
            android:summary="@string/about_github"
            android:title="Github" />
        <Preference
            android:key="weixingongzhonghao"
            android:summary="@string/weixin_hao"
            android:title="公众号" />
        <Preference
            android:key="qqqun"
            android:summary="@string/qq_qun"
            android:title="qq群" />
    </PreferenceCategory>
    <PreferenceCategory android:title="版权">
        <Preference
            android:summary="一只萌萌的Nico酱"
            android:title="喵搜" />
    </PreferenceCategory>
</PreferenceScreen>