<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/login_back">
        <include layout="@layout/basic_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/RegisterLinearLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RegisterText"
                android:text="@string/register_email"
                />
            <com.example.animation.view.LineEditText
                android:id="@+id/forget_password_email"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:hint="@string/forget_email"
                style="@style/RegisterEdit"/>
        </LinearLayout>

        <Button
            android:id="@+id/forget_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_button"
            style="@style/RegisterLinearLayout"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@color/colorAccent"
            />
        >
    </LinearLayout>
</FrameLayout>
