<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/login_back"
        >
        <com.example.animation.view.LineEditText
            android:id="@+id/login_passowrd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:hint="@string/password"
            style="@style/MyEditText"/>
        <CheckBox
            android:id="@+id/login_isseepassword"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:checked="false"
            android:layout_centerVertical="true"
            android:layout_alignRight="@id/login_passowrd"
            android:button="@null"
            android:background="@drawable/is_see_password"
            />
        <com.example.animation.view.LineEditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@id/login_passowrd"
            android:hint="@string/user_name"
            style="@style/MyEditText"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/login_username">
            <TextView
                android:id="@+id/login_theamtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:text="我们的相遇才刚刚开始"
                android:ems="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/login_theamtext"
                android:layout_toRightOf="@id/login_theamtext"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:text="欢迎登陆喵搜"
                android:ems="1"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/login_forgetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/login_passowrd"
            android:layout_marginTop="5dp"
            android:layout_alignRight="@id/login_passowrd"
            android:text="@string/forget_password"
            android:textSize="15sp"
            android:textColor="@color/blue"
            />
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_forgetpassword"
            android:layout_alignLeft="@id/login_passowrd"
            android:layout_alignRight="@id/login_passowrd"
            android:text="@string/login"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@color/colorAccent"
            />
        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:layout_below="@id/login_button"
            android:layout_centerHorizontal="true"
            style="@style/LoginTextView"
            />
    </RelativeLayout>
</FrameLayout>
